modules/gdscript/tests/scripts/analyzer/errors/duplicate_abstract.gd
extends RefCounted

@abstract
@abstract
class A:
	pass

func test():
	pass
